--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+div{
+  position:relative;
+}
+
+
 .nav{
     height:57px;
     background-color:#0A0A66;
@@ -31,7 +36,7 @@
 .btn{
     background-color:#0066FF;
     padding-left:30px;
-    height:400;
+    height:700;
     width:300;
     text-align:left;
     }
@@ -70,11 +75,7 @@
     border:2px solid #0A0A66;
 }
 
-.btn:hover{
-    border:5px solid #0A0A66;
-}
 
-.btn h
 .learn-more {
   background-color: #f7f7f7;
 }
