--- a/login.css
+++ b/login.css
@@ -1,59 +1,91 @@
-body{
-    background-color:#66AEE2;
-}
-.titulo{
-    padding-top: 1px;
-    text-align:center;
-    height:180;
-    font-size:30;
-    font-family:Verdana;
-    background-color:white;
-    }
-.titulo h1{
-    color:#4590C7;
+div{
+  position:relative;
 }
 
-.imagenes{
-    height:320;
-    background-color: white;
-    margin:center;
+
+.nav{
+    height:57px;
+    background-color:#0A0A66;
+    border-bottom: 2px solid #0066FF;
     }
-
-
-
-.login{
-    margin: auto;
-    width:400;
-    height:300;
-    background-color:#BCD2EE;
-    border-radius: 10px;
-    border: 5px solid #6495ED;
-    text-align:center;
+.nav .container{
+    margin-top:3px
+}
+.nav a {
+  color: #0066FF;
+  font-size: 17px;
+  font-family:  sans-serif,'League Gothic',FrutigerLTStd-LightCn, Arial;
+  font-weight: bold;
+  margin-top:px;
+  padding:20px 15px;
+  text-transform: uppercase;
 }
 
-.login p{
-        font-family: Verdana, sans-serif;
-        padding :9px;
-        border: 1px solid red;
-    }
-.login div{
-    
-border: 1px solid #6495ED;
-    background-color: #BCD2EE;
-    height: 60px;
-    width: 100px;
-    margin: auto;
-    text-align:center;
+.nav a:hover{
         
+        color:white;
+        text-decoration:none;
+        background-color:#0066FF;
     }
-.login div:hover{
-        border: 1px solid #6495ED;
-        background-color: #4590C7;
+
+.nav li {
+  display: inline;
+}
+
+
+.btn{
+    background-color:#0066FF;
+    padding-left:30px;
+    height:700;
+    width:300;
+    text-align:left;
     }
-div a {
-    text-decoration: none;
-    color: white;
-    font-family: Verdana, sans-serif;
-    font-weight:bold;
-    font-size:22px;
+.jumbotron {
+  background-image:url('http://launionmc.files.wordpress.com/2014/04/essbio.jpg?w=550&h=352');
+  height: 700px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jumbotron .container {
+  position: relative;
+  top:40px;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  font-size: 48px;  
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
+.jumbotron h2 {
+  color: #fff;
+  font-size: 34px;  
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
+.jumbotron p {
+  font-size: 20px;
+  color: #fff;
+}
+
+.btn{
+    border:2px solid #0A0A66;
+}
+
+
+.learn-more {
+  background-color: #f7f7f7;
+}
+
+.learn-more h3 {
+  font-family: 'Shift', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.learn-more a {
+  color: #00b0ff;
 }
