Empezando Parte 2 Admin
Sumidero Admin

--- a/css/sumidero.css
+++ b/css/sumidero.css
@@ -1,22 +1,16 @@
-div{
-  position:relative;
-}
-
-
 .nav{
     height:57px;
     background-color:#0A0A66;
     border-bottom: 2px solid #0066FF;
     }
 .nav .container{
-    margin-top:3px
+    margin-top:3px;
 }
 .nav a {
   color: #0066FF;
   font-size: 17px;
   font-family:  sans-serif,'League Gothic',FrutigerLTStd-LightCn, Arial;
   font-weight: bold;
-  margin-top:px;
   padding:20px 15px;
   text-transform: uppercase;
 }
@@ -32,24 +26,16 @@ div{
   display: inline;
 }
 
-
-.btn{
-    background-color:#0066FF;
-    padding-left:30px;
-    height:700;
-    width:300;
-    text-align:left;
-    }
 .jumbotron {
   background-image:url('http://launionmc.files.wordpress.com/2014/04/essbio.jpg?w=550&h=352');
-  height: 700px;
+  height: 1000px;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .jumbotron .container {
   position: relative;
-  top:40px;
+  top:10px;
 }
 
 .jumbotron h1 {
@@ -70,10 +56,44 @@ div{
   font-size: 20px;
   color: #fff;
 }
-
-.btn{
+.sector{
+    background-color:#0066FF;
+    padding-left:5px;
+    padding-right:5px;
+    height:500;
+    width:width;
     border:2px solid #0A0A66;
+    text-align:left;
+    }
+.sector h2{
+    margin-left:5px;
 }
+
+.sistema{
+    margin-top:5px;
+    background-color:#0066FF;
+    padding-left:5px;
+    padding-right:5px;
+    height:300px;
+    width:500px;
+    border:2px solid #0A0A66;
+    display:inline-block;
+}
+
+.sumidero p{
+    font-size:10px;
+}
+.sumidero{
+    margin: 2px;
+    display: inline-block;
+    }
+ .cuad{
+    margin-top:20px;
+    background-color:#0066FF;
+    height:30px;
+    width:30px;
+    border:2px solid #0A0A66;
+    }
 
 
 .learn-more {
