--- a/css/globalView.css
+++ b/css/globalView.css
@@ -1,29 +1,33 @@
 
 .sector{
+    margin-top: 10px;
     background-color:#0066FF;
     padding-left:5px;
     padding-right:5px;
     height:500;
-    width:width;
+    width:400;
     border:2px solid #0A0A66;
     text-align:left;
     }
-.sector h2{
+.sector h3{
+    color: white;
     margin-left:5px;
 }
 
 .sistema{
+    display:inline-block;
     margin-top:5px;
     background-color:#0066FF;
     padding-left:5px;
     padding-right:5px;
-    height:300px;
-    width:500px;
+    height:250px;
+    width:300px;
     border:2px solid #0A0A66;
-    display:inline-block;
+    
 }
 
 .sumidero p{
+    color: white;
     font-size:10px;
 }
 .sumidero{
@@ -32,7 +36,7 @@
     }
  .cuad{
     margin-top:20px;
-    background-color:#0066FF;
+    background-color:greenyellow;
     height:30px;
     width:30px;
     border:2px solid #0A0A66;
