--- a/css/globalView.css
+++ b/css/globalView.css
@@ -1,4 +1,5 @@
 
+
 .sector{
     margin-top: 10px;
     background-color:#0066FF;
@@ -40,4 +41,7 @@
     height:30px;
     width:30px;
     border:2px solid #0A0A66;
+    }
+    .cuad:hover{
+        border:3px solid #0A0A66;
     }
